# simple-p2p-docs

./: .gitignore  README.md  docker-compose.yml  technical_progress_report.md  test-wasm-browser.js
.github/: copilot-instructions.md
simple-p2p-docstore/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  fly.toml
simple-p2p-docstore/src/: lib.rs  node.rs  wasm_bindings.rs  wasm_transport.rs
simple-p2p-docstore/src/behaviour/: docstore.rs  mod.rs  peer_dht.rs  relay.rs
simple-p2p-docstore/www/: index.html  main.js
