[package]
name = "simple-p2p-docstore"
version = "0.1.0"
edition = "2021"

[lib]
name = "simple_p2p_docstore"
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
# Core libp2p - using PR #5978 branch for browser-to-browser WebRTC
libp2p = { git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication", default-features = false, features = [
    "identify",
    "ping",
    "gossipsub",
    "kad",
    "macros",
    "relay",
] }
libp2p_kad = { package = "libp2p-kad", git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication" }

# Async and utilities
futures = "0.3"
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Serialization (wire)
postcard = { version = "1", features = ["alloc"] }

# Random number generation for WASM
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-specific libp2p features
libp2p = { git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication", default-features = false, features = [
    "identify",
    "ping",
    "gossipsub",
    "kad",
    "macros",
    "wasm-bindgen",
] }
libp2p_kad = { package = "libp2p-kad", git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication" }

# Browser transport - using PR #5978 branch
libp2p-webrtc-websys = { git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication", package = "libp2p-webrtc-websys" }

# WASM interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "console",
] }
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

# Conditional deps for targets
[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
# Native-specific libp2p features
libp2p = { git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication", default-features = false, features = [
    "identify",
    "ping",
    "gossipsub",
    "kad",
    "macros",
    "tcp",
    "tokio",
    "noise",
    "yamux",
    "relay",
] }
libp2p_kad = { package = "libp2p-kad", git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication" }

tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
rand = "0.8"

# Native transports - using PR #5978 branch
libp2p-webrtc = { git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication", package = "libp2p-webrtc", features = ["tokio"] }
libp2p-tcp = { git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication", package = "libp2p-tcp", features = ["tokio"] }
libp2p-yamux = { git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication", package = "libp2p-yamux" }
libp2p-noise = { git = "https://github.com/elijahhampton/rust-libp2p", branch = "feat(webrtc)-implement-webrtc-protocol-for-browser-to-browser-communication", package = "libp2p-noise" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

